fix: year slider vertical alignment

--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -186,7 +186,7 @@
     }
     
     .form-group.shiny-input-container {
-      margin-top: 30px;
+      margin-top: 50px;
       
       // knob
       .irs-handle.single {
